--- a/app/globals.css
+++ b/app/globals.css
@@ -27,14 +27,6 @@ html {
   transition-duration: 300ms;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -130,4 +122,21 @@ html {
 body:has(#hero .text-highlight) {
   background-color: var(--background-landing) !important;
   color: var(--foreground-landing);
+}
+
+.primary-button {
+  border-width: 2px;
+  border-style: solid;
+  border-color: var(--highlight);
+  padding: 12px 16px;
+  border-radius: 12px;
+  font-weight: bold;
+  transition: all 300ms ease-in-out;
+}
+
+.primary-button:hover {
+  color: var(--stroke);
+  background-color: var(--highlight);
+  border-color: var(--stroke);
+  font-weight: 900;
 }
