--- a/app/globals.css
+++ b/app/globals.css
@@ -155,3 +155,12 @@ body:has(#hero .text-highlight) {
   transition-timing-function: ease-in-out;
   transition-duration: 300ms;
 }
+
+.sign-up-label {
+  font-weight: 900;
+  font-size: 16px;
+}
+
+.form-item-spacing {
+  margin-top: 0;
+}
